z-index fixed

--- a/src/scss/StartMenu.scss
+++ b/src/scss/StartMenu.scss
@@ -6,6 +6,7 @@ $light-blue: #0c8dea;
   height: 650px;
   position: absolute;
   bottom: 0px;
+  z-index: 100;
   * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
